feat: a Leg says the way its Stretch arrives at its first anchor (#20)
Leg's startsStretch component becomes arrives: the travel of the leg
before it through its last column, or null at the stretch's start,
which startsStretch() now answers. A builder can then build the block
at an intermediate Anchor as the corner it becomes, since the later
leg's block there is the one laid. A Detour keeps it, as it arrives at
its last anchor the way the leg does.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>